--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -1,3 +1,9 @@
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+        @content;
+    }
+}
+
 @mixin tablet {
     @media screen and (min-width: 480px) {
         @content;
