--- a/src/components/QuienesSomos/_news.scss
+++ b/src/components/QuienesSomos/_news.scss
@@ -1,7 +1,9 @@
 .quienes-somos-container p{
-    text-align: center;
     width: 40%;
     height: 40%;
     margin: 20px;
+}
 
+.quienes-somos-container span {
+    text-align: center;
 }
