--- a/src/components/QuienesSomos/_news.scss
+++ b/src/components/QuienesSomos/_news.scss
@@ -1,9 +1,31 @@
-.quienes-somos-container p{
-    width: 40%;
-    height: 40%;
-    margin: 20px;
+.quienes_somos_container {
+    height:600px;
+    background-image: url('../../assets/fondoAboutUs.jpg');
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
-.quienes-somos-container span {
-    text-align: center;
+.quienes_somos_text_img {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
+
+.quienes_somos_text {
+    width: 40%;
+    height: 40%;
+    margin:30px 30px 10px 60px ;
+} 
+
+.quienes_somos_img {
+    width: 50%;
+}
+.quienes_somos_img img {
+    width: 70%;
+    margin: 10px 10px 10px 80px;
+}
+
+
+
