--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -50,6 +50,7 @@
         opacity: 0;
         pointer-events: none;
         transition: opacity 0.4s;
+        justify-content: space-evenly;
 
       }
 
@@ -106,6 +107,7 @@
         }
 
         @include mobile-tablet {
+          font-size: 16px;
           line-height: 60px;
           color: $ligth-gray;
 
