--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -13,6 +13,9 @@
         height: 600px;
         background-size: 100%;
     }
+    span {
+        color: $white;
+    }
 }
 
 .programando_text_img {
@@ -45,6 +48,7 @@
             margin: 20px;
         }
     }
+
     
     width: 90%;
     @include tablet {
