Fix some imports

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,7 @@
 /* media-queries */
 @import "./styles/media-queries";
 @import "./styles/colors";
-@import "./styles/fonts-senttings";
+@import "./styles/fonts-settings";
 
 
 * {
