--- a/src/components/Presentation/_presentation.scss
+++ b/src/components/Presentation/_presentation.scss
@@ -1,5 +1,6 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
+@import "../../styles/fonts-settings";
 
 .presentation_container {
   max-width: 100vw;
