--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -1,5 +1,7 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
+@import "../../styles/fonts-settings";
+
 
 .programando_container {
     height: 500px;
