add emprendiendo la inclusion

--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -16,6 +16,12 @@
     }
 }
 
+@mixin desktop2 {
+    @media screen and (min-width: 1024px) {
+        @content;
+    }
+}
+
 @mixin mobile-tablet {
     @media screen and (max-width: 950px) {
         @content;
