--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -4,16 +4,15 @@
 
 
 .programando_container {
-    height: 500px;
+
     background-image: url("../../assets/fondoAboutUs.jpg");
     background-position: right;
     background-repeat: no-repeat;
     @include tablet {
         height: auto;
     }
-    @include desktop {
-        height: 600px;
-        background-size: 100%;
+    @include desktop2 {
+
     }
     span {
         color: $white;
@@ -25,7 +24,7 @@
     @include tablet {
 
     }
-    @include desktop {
+    @include desktop2 {
         margin-top: 40px;
         display: flex;
         flex-direction: row-reverse;
@@ -45,7 +44,7 @@
             margin: 10px;
         }
 
-        @include desktop {
+        @include desktop2 {
             font-size: 20px;
             margin: 20px;
         }
@@ -56,7 +55,7 @@
     @include tablet {
         margin: 0% 5%;
     }
-    @include desktop {
+    @include desktop2 {
         width: 40%;
         height: 40%;
         margin: 10% 5%;
@@ -66,7 +65,7 @@
     @include tablet {
 
     }
-    @include desktop {
+    @include desktop2 {
         width: 50%;
     }
     img {
@@ -77,7 +76,7 @@
             margin: 5%  10%;
             width: 80%;
         }
-        @include desktop {
+        @include desktop2 {
             margin: 0% 10%5% 10%
         }
     }
