--- a/src/components/QuienesSomos/_aboutUs.scss
+++ b/src/components/QuienesSomos/_aboutUs.scss
@@ -2,7 +2,6 @@
 @import "../../styles/media-queries";
 
 .quienes_somos_container {
-  height: 500px;
   background-image: url("../../assets/fondoAboutUs.jpg");
   background-position: right;
     background-repeat: no-repeat;
@@ -11,8 +10,7 @@
     height: auto;
   }
 
-  @include desktop {
-    height: 600px;
+  @include desktop2 {
   
     background-size: 100% 100%;
   }
@@ -24,7 +22,7 @@
     
   }
 
-  @include desktop {
+  @include desktop2 {
     margin-top: 40px;
     display: flex;
     flex-direction: row;
@@ -39,7 +37,7 @@
     @include tablet {
       font-size: 16px;
     }
-    @include desktop {
+    @include desktop2 {
       font-size: 20px;
     }
   }
@@ -47,7 +45,7 @@
   @include tablet {
   }
 
-  @include desktop {
+  @include desktop2 {
     font-size: 20px;
     width: 40%;
     height: 40%;
@@ -58,7 +56,7 @@
 .quienes_somos_img {
   @include tablet {
   }
-  @include desktop {
+  @include desktop2 {
     width: 50%;
   }
 
@@ -68,7 +66,7 @@
     margin: 5% 10%;
     @include tablet {
     }
-    @include desktop {
+    @include desktop2 {
       width: 90%;
       margin: 0px 10px 10px 10px;
     }
