fixes in hover of the section undertaking

--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -8,6 +8,7 @@
     background-image: url("../../assets/fondoAboutUs.jpg");
     background-position: right;
     background-repeat: no-repeat;
+    cursor: default;
     @include tablet {
         height: auto;
     }
