--- a/src/components/QuienesSomos/_aboutUs.scss
+++ b/src/components/QuienesSomos/_aboutUs.scss
@@ -5,22 +5,21 @@
   min-height: 90vh;
   background-image: url("../../assets/fondoAboutUs.jpg");
   background-position: right;
-    background-repeat: no-repeat;
+  background-repeat: no-repeat;
+  cursor: default;
 
   @include tablet {
     height: auto;
   }
 
   @include desktop2 {
-  
     background-size: 100% 100%;
   }
 }
 
 .quienes_somos_text_img {
-    margin-top: 10px;
+  margin-top: 10px;
   @include tablet {
-    
   }
 
   @include desktop2 {
