--- a/src/components/Emprendiendo/_undertaking.scss
+++ b/src/components/Emprendiendo/_undertaking.scss
@@ -1,6 +1,7 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
 .emprendiendo_container {
+    margin-top: 5%;
     min-height: 90vh;
     background-color: $ligth-blue;
     width: 100%;
@@ -44,6 +45,7 @@
     background-color: $white;
     border-radius: 5%;
     margin: 0% 5% 5% 5%;
+    transition: all 400ms ease;
     figure {
         width: 20vh;
     }
