Add margin and width fixes

--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -4,7 +4,7 @@
 
 
 .programando_container {
-    margin-top: 5%;
+    margin: 10% 0% 10% 0%;
     background-image: url("../../assets/fondoAboutUs.jpg");
     background-position: right;
     background-repeat: no-repeat;
