--- a/src/components/QuienesSomos/_aboutUs.scss
+++ b/src/components/QuienesSomos/_aboutUs.scss
@@ -2,6 +2,7 @@
 @import "../../styles/media-queries";
 
 .quienes_somos_container {
+  margin: 10% 0% 10% 0%;
   background-image: url("../../assets/fondoAboutUs.jpg");
   background-position: right;
   background-repeat: no-repeat;
