Add component volunteer and form

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -61,6 +61,7 @@
         height: 50px;
         display: flex;
         align-items: center;
+        justify-content: center;
 
         @include mobile-tablet {
           padding: 0;
