--- a/src/app.scss
+++ b/src/app.scss
@@ -2,10 +2,9 @@
 @import "./styles/media-queries";
 @import "./styles/colors";
 @import "./styles/fonts-senttings";
-//@import "node_modules/aos/src/sass/aos.scss";
 
 * {
-  margin: 0 auto;
+  margin: 0;
   box-sizing: border-box;
   font-family: $font-family;
 }
@@ -14,6 +13,22 @@
   color: $primary-color;
   text-align: center;
   text-shadow: 1.5px 1px 1px rgba(0, 0, 0, 0.25);
+  font-size: $title-mobile-size;
+  font-style: normal;
+  font-weight: 600;
+
+  @include tablet {
+    font-size: $title-tablet-size;
+  }
+
+  @include desktop {
+    font-size: $title-desktop-size;
+  }
+}
+
+.titleDark {
+  color: $dark-gray;
+  text-align: center;
   font-size: $title-mobile-size;
   font-style: normal;
   font-weight: 600;
@@ -36,7 +51,7 @@
   }
 
   @include desktop {
-    font-size: $title-desktop-size;
+    font-size: $subtitle-desktop-size;
   }
 }
 
