--- a/src/components/Button/_button.scss
+++ b/src/components/Button/_button.scss
@@ -11,10 +11,10 @@
   padding: 0.5rem 1.5rem;
   max-width: fit-content;
   cursor: pointer;
-  transition: all ease-in-out 0.3s;
 
   &:hover {
-    transform: scale(1.2);
+    transition: all 0.4s ease;
+    transform: scale(1.1);
   }
 
   @include desktop {
