--- a/src/components/Presentation/_presentation.scss
+++ b/src/components/Presentation/_presentation.scss
@@ -5,8 +5,12 @@
   max-width: 100vw;
   position: relative;
 
+  @include tablet {
+    max-width: 96.5vw;
+  }
+
   @include desktop {
-    min-width: 100vw;
+    max-width: 96.5vw;
     display: flex;
     justify-content: center;
   }
