Add fixes on changes

--- a/src/components/Emprendiendo/_undertaking.scss
+++ b/src/components/Emprendiendo/_undertaking.scss
@@ -25,7 +25,7 @@
 
     }
     @include desktop2 {  
-       width: 50%;  
+   
     }
 }
 
@@ -46,6 +46,7 @@
     margin: 0% 5% 5% 5%;
     transition: all 400ms ease;
     figure {
+        margin: 0 auto;
         width: 20vh;
     }
     h2 {
@@ -60,17 +61,13 @@
         text-align: center;
     }
     img {
-        margin-top: 10%;
-        width: 10vh;
-        height: 10vh;
+        margin: 10% 30% 0% 30%;
+        width: 40%;
+        height: 40%;
         display: flex;
         align-items: center;
-        color: $ligth-blue;
-        @include tablet {
-            width: 15vh;
-            height: 15vh;
-        }
         @include desktop2{
+            margin: 0 auto;
             width: 20vh;
             height: 20vh;
         }
