--- a/src/components/Team/_team.scss
+++ b/src/components/Team/_team.scss
@@ -8,6 +8,7 @@
     margin: 5% 0px 5% 0px;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     text-align: center;
 }
 .team_card {
