--- a/src/components/Egresados/_egresados.scss
+++ b/src/components/Egresados/_egresados.scss
@@ -1,43 +1,72 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
+@import "../../styles/fonts-settings";
 
 
 .egresados_container {
-    height: 300px;
+    height: 400px;
     background-image: url("../../assets/fondoAboutUs.jpg");
     background-position: right;
     
     @include tablet {
       height: auto;
+      background-size: 100% 100%;
     }
     @include desktop {
       height: 600px;
-      background-size: 100%;
+      background-size: 100% 100%;
     }
-    
-  }
- 
 
-  .egresados_text {
-
-    margin-top: 90px;
-    width: 70px;
-    display: flex;
-    p {
-      color: $dark-gray;
-      font-size: 14px;
+    .egresados_text_video {
+     
+      margin-top: 10px;
       @include tablet {
-        font-size: 16px;
-
+  
       }
       @include desktop {
-        font-size: 20px;
-        margin-top: 200px;
+          margin-top: 40px;
+        
+      
       }
-    }
-    width: 90%;
-    
- 
   }
+
+    .egresados_text{
+      margin: 2%;
+      text-align: center;
+    h2 {
+        font-family: $font-family;
+        color: $dark-gray;
+        font-size: 12px;
+        margin: 20px;
+
+        @include tablet {
+            font-size: 16px;
+            margin: 10px;
+        }
+
+        @include desktop {
+            font-size: 20px;
+           
+        }
+    }
+
+    
+width: 90%;
+    @include tablet {
+        margin: 0% 5%;
+        justify-content: center;
+    }
+  }}
+
+    .video{
+      width: 400px;
+      height: 300px;
+      display:grid;
+      align-content: center;
+      }
+ 
+ 
+
+  
 
 
