--- a/src/views/Presentation/_presentation.scss
+++ b/src/views/Presentation/_presentation.scss
@@ -6,11 +6,11 @@
   max-width: 100vw;
   position: relative;
 
-  @include tablet {
+ /*  @include tablet {
     max-width: 96.5vw;
-  }
+  } */
 
-  @include desktop {
+  @include desktop-large {
     max-width: 96.5vw;
     display: flex;
     justify-content: center;
