--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -4,21 +4,19 @@
 
 
 .programando_container {
-    margin: 10% 0% 10% 0%;
+    height: 500px;
     background-image: url("../../assets/fondoAboutUs.jpg");
     background-position: right;
     background-repeat: no-repeat;
-    cursor: default;
     @include tablet {
         height: auto;
-        min-height: 90vh;
     }
-    @include desktop2 {
-
+    @include desktop {
+        height: 600px;
+        background-size: 100%;
     }
     span {
         color: $white;
-        @include desktop2 {}
     }
 }
 
@@ -27,7 +25,7 @@
     @include tablet {
 
     }
-    @include desktop2 {
+    @include desktop {
         margin-top: 40px;
         display: flex;
         flex-direction: row-reverse;
@@ -47,7 +45,7 @@
             margin: 10px;
         }
 
-        @include desktop2 {
+        @include desktop {
             font-size: 20px;
             margin: 20px;
         }
@@ -58,7 +56,7 @@
     @include tablet {
         margin: 0% 5%;
     }
-    @include desktop2 {
+    @include desktop {
         width: 40%;
         height: 40%;
         margin: 10% 5%;
@@ -68,7 +66,7 @@
     @include tablet {
 
     }
-    @include desktop2 {
+    @include desktop {
         width: 50%;
     }
     img {
@@ -79,7 +77,7 @@
             margin: 5%  10%;
             width: 80%;
         }
-        @include desktop2 {
+        @include desktop {
             margin: 0% 10%5% 10%
         }
     }
