--- a/src/components/TeamUndertaking/_teamUndertaking.scss
+++ b/src/components/TeamUndertaking/_teamUndertaking.scss
@@ -1,6 +1,9 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
 
+.teamUndertaking_container {
+    padding-top:70px;
+}
 .teamUndertaking {
     cursor: default;
 }
