--- a/src/components/AliadosProg/_aliadosP.scss
+++ b/src/components/AliadosProg/_aliadosP.scss
@@ -3,6 +3,7 @@
 @import "../../styles/fonts-settings";
 
 .aliadosp_container{
+    padding-top: 70px;
     height: 500px;
     @include mobile-tablet {
         height: auto;
