--- a/src/components/Axes/_axes.scss
+++ b/src/components/Axes/_axes.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
 .axes_container {
-    margin: 10% 0%;
+    padding-top:70px;
     cursor: default;
     text-align: center;
     h2 {
