--- a/src/components/Emprendiendo/_undertaking.scss
+++ b/src/components/Emprendiendo/_undertaking.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
 .emprendiendo_container {
-    margin: 10% 0% 10% 0%;
+    padding-top:70px;
     background-color: $ligth-blue;
     width: 100%;
     cursor:default;
