--- a/src/components/Team/_team.scss
+++ b/src/components/Team/_team.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
 .team_container {
-    margin: 10px;
+    padding-top:70px;
     cursor: default;
 }
 .team_cards {
