--- a/src/components/QuienesSomos/_aboutUs.scss
+++ b/src/components/QuienesSomos/_aboutUs.scss
@@ -2,13 +2,15 @@
 @import "../../styles/media-queries";
 
 .quienes_somos_container {
-  
   background-image: url("../../assets/fondoAboutUs.jpg");
   background-position: right;
   background-repeat: no-repeat;
   cursor: default;
   background-size: 100% 100%;
-  padding-top:70px;
+  padding-top: 30px;
+  @include desktop2 {
+    padding-top: 70px;
+} 
 }
 
 .quienes_somos_text_img {
@@ -40,7 +42,7 @@
   }
 
   @include desktop2 {
-    font-size: 20px;
+    
     width: 40%;
     height: 40%;
     margin: 30px 30px 10px 60px;
