--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -4,7 +4,7 @@
 
 
 .programando_container {
-    padding-top:70px;
+    padding: 30px;
     background-image: url("../../assets/fondoAboutUs.jpg");
     background-position: right;
     background-repeat: no-repeat;
@@ -13,7 +13,7 @@
         height: auto;
     }
     @include desktop2 {
-
+        padding-top: 70px;
     }
     span {
         color: $white;
