--- a/src/components/TeamUndertaking/_teamUndertaking.scss
+++ b/src/components/TeamUndertaking/_teamUndertaking.scss
@@ -2,7 +2,10 @@
 @import "../../styles/media-queries";
 
 .teamUndertaking_container {
-    padding-top:70px;
+    padding-top: 30px;
+  @include desktop2 {
+    padding-top: 70px;
+} 
 }
 .teamUndertaking {
     cursor: default;
