--- a/src/components/Axes/_axes.scss
+++ b/src/components/Axes/_axes.scss
@@ -1,8 +1,6 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
 .axes_container {
-    margin: 10% 0%;
-    cursor: default;
     text-align: center;
     h2 {
         color: $dark-gray;
@@ -10,39 +8,54 @@
 
 }
 .axes_cards {
-
-    margin: 5%;
+    padding: 10px;
+    margin: 15px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     @include tablet {
         flex-direction: row;
     }
 }
 .axes_card {
     background-color: $ligth-blue;
-    height: 15vh;
-    margin: 5%;
+    height: 18vh;
+    margin: 15px;
     overflow: hidden;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
     transition: all 400ms ease;
-    h3 {
-        color: $white;
-        margin: 10px 0%;
-        height: 30%;
-    }
-    p {
-        margin: 0% 2%;
-        height: 50%;
-        text-align: left;
-    }
     a {
-        color: $primary-color;
         text-decoration: none;
     }
+    h3 {
+        margin-top: 10px;
+        color: $primary-color;
+        height: 50px;
+        @include tablet {
+            margin-top: 20px;
+            height: 80px;
+        }
+    }
+    p {
+        padding: 0px 5px;
+        height: 50%;
+        text-align: center;
+    }
+    span {
+        color: $primary-color;
+    }
     @include tablet {
-        margin: 0% 3%;
-        height: 30vh;
-        width: 55vh;
+        display: flex;
+    margin: 0% 3%;
+    height: 300px;
+    width: 300px;
+    align-items: center;
+    justify-content: flex-start;
+    align-content: space-between;
+    flex-wrap: wrap;
+    }
+    @include desktop2 {
+        height: 250px;
     }
 }
 .axes_card:hover {
