--- a/src/components/QuienesSomos/_aboutUs.scss
+++ b/src/components/QuienesSomos/_aboutUs.scss
@@ -2,7 +2,7 @@
 @import "../../styles/media-queries";
 
 .quienes_somos_container {
-  margin: 10% 0% 10% 0%;
+  height: 100%;
   background-image: url("../../assets/fondoAboutUs.jpg");
   background-position: right;
   background-repeat: no-repeat;
@@ -20,11 +20,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
   }
 }
 
 .quienes_somos_text {
+  padding: 10px;
   p {
+    margin-bottom: 15px;
     color: $dark-gray;
     font-size: 14px;
     @include tablet {
@@ -34,15 +37,15 @@
       font-size: 20px;
     }
   }
-  width: 90%;
+
   @include tablet {
+    padding: 20px;
   }
 
   @include desktop2 {
     font-size: 20px;
     width: 40%;
     height: 40%;
-    margin: 30px 30px 10px 60px;
   }
 }
 
@@ -54,7 +57,7 @@
   }
 
   img {
-    border-radius: 5%;
+    border-radius: 2.5%;
     width: 80%;
     margin: 5% 10%;
     @include tablet {
