--- a/src/app.scss
+++ b/src/app.scss
@@ -31,6 +31,23 @@
   }
 }
 
+.titleBlue {
+  color: $primary-color;
+  text-align: center;
+  text-shadow: 1.5px 1px 1px rgba(0, 0, 0, 0.25);
+  font-size: $title-mobile-size;
+  font-style: normal;
+  font-weight: 700;
+
+  @include tablet {
+    font-size: $title-tablet-size;
+  }
+
+  @include desktop {
+    font-size: $title-desktop-size;
+  }
+}
+
 .titleDark {
   color: $dark-gray;
   text-align: center;
