--- a/src/views/Done/done.scss
+++ b/src/views/Done/done.scss
@@ -20,6 +20,11 @@
     }
 
     .titlesDone {
+      .title {        
+        color: $primary-color;
+        text-shadow: 1.5px 1px 1px rgba(0, 0, 0, 0.25);
+      }
+      
       h1.title {
         text-align: left;
         font-size: 35px;
