--- a/src/components/Slider/_slider.scss
+++ b/src/components/Slider/_slider.scss
@@ -16,6 +16,7 @@ button {
 
 .card {
   width: 150px;
+  height: 300px;
   text-align: center;
   margin: 10px;
   border-radius: 5px;
@@ -27,5 +28,7 @@ button {
 
 .card img {
   max-width: 100%;
-  height: auto;
+  max-height: 200px;
+  height: 150px;
+  object-fit: contain;
 }
