--- a/src/layout/mainLayout.scss
+++ b/src/layout/mainLayout.scss
@@ -1,3 +1,6 @@
+
+@import "../styles/media-queries";
+
 .main {
     height: auto;
     min-height: 100vh;
@@ -6,4 +9,10 @@
 .container {
     min-height: 63.3vh;
     margin-top: 75px;
+
+    @include desktop-large {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+    
 }
