--- a/src/views/Presentation/_presentation.scss
+++ b/src/views/Presentation/_presentation.scss
@@ -6,9 +6,6 @@
   max-width: 100vw;
   position: relative;
 
- /*  @include tablet {
-    max-width: 96.5vw;
-  } */
 
   @include desktop-large {
     max-width: 96.5vw;
@@ -69,7 +66,11 @@
 
   figure {
     .presentation_img {
-      max-width: 100%;
+      max-width: 100vw;
+
+      @media screen and (min-width: 1400px) {
+        max-width: 100%;
+      }
     }
   }
 
