--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -27,39 +27,43 @@
         padding: 0;
         margin: 0;
     }
+    .row {
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        /*padding: 10%;
+        margin: -5rem; */
+        align-items: center;
+        p{
+            text-align: center;
+            font-family: $font-family;
+            color: $dark-gray;
     
-
-}
-
-.row {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    /*padding: 10%;
-    margin: -5rem; */
-    align-items: center;
-    p{
-        text-align: center;
-        font-family: $font-family;
-        color: $dark-gray;
-
+        }
+        @include mobile-tablet {
+            margin-left: 20px;
+            margin-bottom: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            align-content: center;
+            text-align: center;
+        }
+    
     }
-    @include mobile-tablet {
-        margin-left: 20px;
-        margin-bottom: 20px;
+    
+    .row .socials a{
+       display: inline-block;
+       color: $dark-gray;
+       font-size: 25px;
+       margin: 0 15px;
+       transition: 0.5;
+    }
+    
+    .row .socials{
+        margin: 1em;
+        align-items: center;
     }
 
 }
 
-.row .socials a{
-   display: inline-block;
-   color: $dark-gray;
-   font-size: 25px;
-   margin: 0 15px;
-   transition: 0.5;
-}
-
-.row .socials{
-    margin: 1em;
-    align-items: center;
-}
