--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -4,7 +4,7 @@
 
 
 .programando_container {
-    padding: 30px;
+    padding-top: 30px;
     background-image: url("../../assets/fondoAboutUs.jpg");
     background-position: right;
     background-repeat: no-repeat;
