min-hight en algunas secciones

--- a/src/components/AliadosProg/_aliadosP.scss
+++ b/src/components/AliadosProg/_aliadosP.scss
@@ -10,7 +10,7 @@
         height: auto;
     }
     @include desktop {
-        height: 600px;
+        min-height: 100%;
         background-size: 100%;
         padding-top: 70px;
     }
