--- a/src/components/Programando/_programming.scss
+++ b/src/components/Programando/_programming.scss
@@ -14,6 +14,7 @@
     }
     @include desktop2 {
         padding-top: 70px;
+        min-height: 100vh;
     }
     .span_title {
         color: $white;
