--- a/src/views/Presentation/_presentation.scss
+++ b/src/views/Presentation/_presentation.scss
@@ -6,11 +6,12 @@
   max-width: 100vw;
   position: relative;
 
-
   @include desktop-large {
     max-width: 96.5vw;
     display: flex;
     justify-content: center;
+    min-height: 100vh;
+    
   }
 
   .firmFormar {
