--- a/src/components/Aliados/_aliados.scss
+++ b/src/components/Aliados/_aliados.scss
@@ -4,17 +4,15 @@
 
 .aliados_container{
     padding-top: 30px;
-    height: 400px;
+    max-height: 100vh;
     text-align: center;
     position: relative;
-
-
- 
+    margin: 0 auto;
     @include mobile-tablet {
         height: auto;
     }
     @include desktop {
-        height: 600px;
+        max-height: 100vh;
         background-size: 100%;
         padding-top: 70px;
     }
@@ -24,6 +22,7 @@
         justify-content: space-around;
         width: 100%;
         height: 100px;
+        margin:70px 0 50px 0;
        
 
         @include mobile-tablet{
