--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -26,6 +26,7 @@
     @include desktop {
         padding: 0;
         margin: 0;
+        max-width: 100%;
     }
     .row {
         height: 100%;
