refactor: contact and carousel allies

--- a/src/components/Contacto/_contacto.scss
+++ b/src/components/Contacto/_contacto.scss
@@ -52,10 +52,19 @@
 
     .boton_prensa{
       margin-right: 20px;
+      a{
+        text-decoration: none;
+      }
     }
 
-    .boton_wsp{
-        background-color: $white;
+    .boton_wsp {
+     background-color: $white;
+     &:focus{
+      outline: none;
+     }
+       a{
+         text-decoration: none;
+       }
     }
 
 }
