--- a/src/components/Aliados/_aliados.scss
+++ b/src/components/Aliados/_aliados.scss
@@ -7,10 +7,7 @@
     height: 400px;
     text-align: center;
     position: relative;
-
-
- 
-    @include mobile-tablet {
+ @include mobile-tablet {
         height: auto;
     }
     @include desktop {
@@ -24,7 +21,7 @@
         justify-content: space-around;
         width: 100%;
         height: 100px;
-       
+        margin-top: 15%;
 
         @include mobile-tablet{
             gap: 0;
@@ -35,7 +32,7 @@
             }
         }
      
-       }
+ }
        
        .logos{
            width: 200px;
@@ -45,18 +42,11 @@
            img{
             width: 100%;
             object-fit: contain;
-
-           }
+         }
        }
 
        button{
-        color: $primary-color;
-        background-color: none;
-        border: none;
-        margin: 0 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    
         @include desktop{
             position: absolute;
         }
@@ -64,10 +54,30 @@
 
        .anterior{
         left: 0;
+        color: $primary-color;
+        font-size: 48px;
+        background: none;
+        border: none;
+        margin: 0px 15px;
+         bottom: 3.5em;
+          
        }
+       .anterior:hover{
+        cursor: pointer;
+      }
 
        .posterior{
         right: 0;
+        color: $primary-color;
+        font-size: 48px;
+        background: none;
+        border: none;
+        margin: 0px 15px;
+        bottom: 3.5em;
+       }
+
+       .posterior:hover{
+        cursor: pointer;
        }
 
 }
