--- a/src/components/Aliados/_aliados.scss
+++ b/src/components/Aliados/_aliados.scss
@@ -14,9 +14,9 @@
         height: auto;
     }
     @include desktop {
-        height: 600px;
         background-size: 100%;
-        padding-top: 70px;
+        padding-top: $padding-top;
+        min-height: 70vh;
     }
     .image-slider{
         display: flex;
@@ -24,11 +24,13 @@
         justify-content: space-around;
         width: 100%;
         height: 100px;
+        margin-top: 130px;
        
 
         @include mobile-tablet{
             gap: 0;
             overflow: hidden;
+            
             .image-slider img{
                 width: 100%;
                 height: auto;
