--- a/src/components/QuienesSomos/_aboutUs.scss
+++ b/src/components/QuienesSomos/_aboutUs.scss
@@ -2,17 +2,15 @@
 @import "../../styles/media-queries";
 
 .quienes_somos_container {
-  height: 100%;
-  background-image: url("../../assets/fondoAboutUs.jpg");
+    background-image: url("../../assets/fondoAboutUs.jpg");
   background-position: right;
   background-repeat: no-repeat;
   cursor: default;
   background-size: 100% 100%;
   padding-top: 30px;
   @include desktop2 {
-    padding-top: 70px;
-    min-height: 100vh;
-
+    padding-top: $padding-top;
+    min-height: $min-height;
   }
 }
 
