--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -7,6 +7,7 @@
 @mixin tablet {
     @media screen and (min-width: 480px) {
         @content;
+        
     }
 }
 
@@ -14,14 +15,18 @@
     @media screen and (min-width: 768px) {
         @content;
     }
+   
 }
 
 @mixin desktop2 {
     @media screen and (min-width: 1024px) {
         @content;
+        
     }
+    
 }
-
+$padding-top: 70px;
+        $min-height: 95vh;
 @mixin mobile-tablet {
     @media screen and (max-width: 950px) {
         @content;
