--- a/src/views/Form/forms.scss
+++ b/src/views/Form/forms.scss
@@ -3,9 +3,12 @@
 
 .titlesFormsContainer {
   text-align: center;
-  padding: 2rem 1rem;
+  padding: 7rem 1rem;
   
-
+  @include tablet {
+    padding:50px;
+  }
+  
   & .subtitle {
     color: $primary-color;
   }
