--- a/src/views/ProgrammingTheInclusion.jsx/ProgrammingTheInclusion.scss
+++ b/src/views/ProgrammingTheInclusion.jsx/ProgrammingTheInclusion.scss
@@ -4,11 +4,13 @@
 .ProgrammingTheInclusion-container {
     padding: 0.5rem;
   @include tablet {
-    padding: 2rem;
+    padding: 0.5rem;
   }
 
   @include desktop {
-    padding: 5rem;
+    padding-top: $padding-top;
+    min-height: $min-height;
+    padding-bottom: 2rem;
   }
   
   .titleContainer {
