--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -2,20 +2,27 @@
 @import "../../styles/media-queries";
 
 .card {
-    width: 250px;
-    height: 250px;
-    img {
-        border-radius: 70px;
-        margin: 10px;
-        width: 15vh;
-        @include tablet {
-            margin: 10px;
-        }
-        @include desktop2 {
-            margin: 20px;
-        }  
+  width: 250px;
+  height: 250px;
+  img {
+    border-radius: 100%;
+    margin: 10px;
+    width: 15vh;
+    height: 15vh;
+    max-width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    @include tablet {
+      margin: 10px;
     }
-    h3 {
-            margin-bottom: 5px;
-        }
+
+    @include desktop2 {
+      margin: 20px;
+      width: 25vh;
+      height: 25vh;
+    }
+  }
+  h3 {
+    margin-bottom: 5px;
+  }
 }
