--- a/src/components/Axes/_axes.scss
+++ b/src/components/Axes/_axes.scss
@@ -15,7 +15,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  @include tablet {
+  align-items: center;
+  @include desktop2 {
     flex-direction: row;
   }
 }
@@ -55,7 +56,7 @@
   @include tablet {
     display: flex;
     height: 300px;
-    width: 300px;
+    width: 450px;
     align-items: center;
     justify-content: flex-start;
     align-content: space-between;
