title y subtitle todas las secciones

--- a/src/views/Form/forms.scss
+++ b/src/views/Form/forms.scss
@@ -4,9 +4,13 @@
 .titlesFormsContainer {
   text-align: center;
   padding: 7rem 1rem;
+  margin-top: 10rem;
+  
   
   @include tablet {
     padding:50px;
+    margin: 1rem;
+    
   }
   
   & .subtitle {
