--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,14 @@
   font-family: $font-family;
 }
 
+div[id]{
+ scroll-margin-top: 55px;
+}
+
+ html {
+  scroll-behavior: smooth;
+ }
+ 
 .title {
   color: $dark-gray;
   text-align: center;
