Fix styles presentation

--- a/src/layout/mainLayout.scss
+++ b/src/layout/mainLayout.scss
@@ -5,6 +5,15 @@
   min-height: 100vh;
 }
 
+.mainContainer {
+  min-height: 63.3vh;
+  margin-top: 75px;
+
+  @media screen and (min-width: 1400px) {
+    max-width: 80%;
+    margin: 0 auto;   
+  }
+}
 .container {
   min-height: 63.3vh;
   margin-top: 75px;
@@ -12,5 +21,6 @@
   @media screen and (min-width: 1400px) {
     max-width: 80%;
     margin: 0 auto;
+    /* padding: 1rem 3rem; */
   }
 }
