--- a/src/views/Presentation/_presentation.scss
+++ b/src/views/Presentation/_presentation.scss
@@ -3,6 +3,7 @@
 @import "../../styles/fonts-settings";
 
 .presentation_container {
+  padding-top: 10px;
   max-width: 100vw;
   position: relative;
 
