--- a/src/components/Aliados/_aliados.scss
+++ b/src/components/Aliados/_aliados.scss
@@ -4,7 +4,7 @@
 
 .aliados_container{
    padding-top: 30px;
-    max-height: 100vh;
+    /* max-height: 100vh; */
     text-align: center;
     position: relative;
     margin: 0 auto;
