--- a/src/components/Slider3d/Card/card.module.scss
+++ b/src/components/Slider3d/Card/card.module.scss
@@ -27,7 +27,7 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: $primary-color;
+    background-color: $ligth-blue;
     border-radius: 25px 25px 0 25px;
 }
 
@@ -38,7 +38,7 @@
     bottom: -40px;
     height: 40px;
     width: 40px;
-    background-color: $primary-color;
+    background-color: $ligth-blue;
 }
 
 .overlay::after {
@@ -49,8 +49,8 @@
 /* Card personas */
 .card_image_person {
   position: relative;
-  height: 150px;
-  width: 150px;
+  height: 200px;
+  width: 200px;
   border-radius: 50%;
   background: #fff;
   padding: 3px;
@@ -70,7 +70,8 @@
   width: 300px;
   background: #fff;
   padding: 1rem;
-  border: 4px solid $primary-color;
+  border: 1px solid $primary-color;
+  border-radius: 16px ;
 }
 
 .card_image .card_img {
