--- a/src/components/Slider3d/swiperSlider.scss
+++ b/src/components/Slider3d/swiperSlider.scss
@@ -92,12 +92,12 @@
 
 .slider-controler .slider-arrow {
   background: $white;
-  width: 3.5rem;
+  width: 2.5rem;
   height: 3.5rem;
   border-radius: 50%;
   left: 42%;
   transform: translateX(-42%);
-  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+  /* filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1)); */
 }
 
 .slider-controler .slider-arrow {
