--- a/src/views/Novedades/_news.scss
+++ b/src/views/Novedades/_news.scss
@@ -6,7 +6,7 @@
 
   @include tablet {
     min-height: 75vh;
-    padding: 2rem 0 3rem 0;
+   /*  padding: 2rem 0 3rem 0; */
   }
   @media screen and (min-width: 660px) {
     padding: 2rem 0 8rem 0;
@@ -23,12 +23,12 @@
 
   .instagram_container {
     padding: 0 2rem;
-    max-height: 75vh;
+    /* max-height: 75vh; */
     
 
-    @include mobile {
+    /* @include mobile {
       max-height: 45vh;
-    }
+    } */
 
     a {
       font-size: x-small;
