--- a/src/views/Done/done.scss
+++ b/src/views/Done/done.scss
@@ -21,6 +21,7 @@
     }
 
     .titlesDone {
+      margin-bottom: 20px;
       .title {        
         color: $primary-color;
         text-shadow: 1.5px 1px 1px rgba(0, 0, 0, 0.25);
