--- a/src/views/Volunteer/volunteer.scss
+++ b/src/views/Volunteer/volunteer.scss
@@ -2,28 +2,38 @@
 @import "../../styles/media-queries";
 
 .container-volunter {
- background-image: url(../../assets/ondaTop1.svg), url(../../assets/ondaTop2.svg);
- background-repeat: no-repeat;
- background-size: contain;
- background-position: top;
- padding: 5rem 1rem 3rem 1rem;
- 
- /* width: 100%; */
+  background-image: url(../../assets/ondaTop1.svg),
+    url(../../assets/ondaTop2.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: top;
+  padding: 5rem 1rem 3rem 1rem;
 
- @include desktop {
+  @include desktop {
     padding: 12rem 5rem 5rem 5rem;
     min-height: 85vh;
- }
+  }
 }
 
 .center-around {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
 
-    & button {
+  .button-volunter_left {
+    width: 50%;
+    margin: 0 10px;
+    text-align: end;
+  }
+  .button-volunter_rigth {
+    width: 50%;
+    margin: 0 10px;
+    text-align: start;
+  }
+
+  /*  & button {
         margin: 1rem;
-    }
+    } */
 }
