add graduate link

--- a/src/components/AliadosProg/_aliadosP.scss
+++ b/src/components/AliadosProg/_aliadosP.scss
@@ -17,6 +17,14 @@
     }
 }
 
+.title{
+    margin-bottom: 15px;
+}
+
+.subtitle{
+    margin-bottom: 10px;
+}
+
 .lanus .logos{
     width: 200px;
     height: 80px;
