--- a/src/components/TeamUndertaking/_teamUndertaking.scss
+++ b/src/components/TeamUndertaking/_teamUndertaking.scss
@@ -11,14 +11,15 @@
   cursor: default;
 }
 .teamUndertaking_cards {
+  margin: 20px 0px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
-  align-content: center;
+  justify-content: center;
   text-align: center;
-  @include desktop2 {
-    margin: 10px 0px;
-    flex-direction: row;
-    justify-content: space-evenly;
+  align-content: space-around;
+  flex-wrap: wrap;
+  @include tablet {
+      flex-direction: row;
+      justify-content: space-evenly;
   }
 }
