--- a/src/layout/LayoutProducts/layoutProducts.module.scss
+++ b/src/layout/LayoutProducts/layoutProducts.module.scss
@@ -1,16 +1,15 @@
+@import "../../styles/colors";
 .container {
   display: grid;
   grid-template-columns: 1fr 3fr; // 25% y 75%
-  gap: 5px; // Espacio entre columnas (ajusta según tus necesidades)
-
-  // Estilos adicionales según tus preferencias
-  background-color: #f0f0f0;
-  padding: 20px;
+  gap: 1px; 
+  padding: 2px;
 }
 
 .sidebar {
   // Estilos para la primera columna (25%)
-  background-color: #e0e0e0;
+  background-color: $white;
+  border-right: 1px solid #ddd;
   padding: 10px;
 }
 
