--- a/src/layout/LayoutProducts/layoutProducts.module.scss
+++ b/src/layout/LayoutProducts/layoutProducts.module.scss
@@ -1,9 +1,14 @@
 @import "../../styles/colors";
+@import "../../styles/media-queries";
+
 .container {
   display: grid;
   grid-template-columns: 1fr 3fr; // 25% y 75%
   gap: 1px; 
   padding: 2px;
+  @include mobile {
+    grid-template-columns: auto;    
+  }
 }
 
 .sidebar {
