--- a/src/components/ProductsEcommerce/_productsEcommerce.scss
+++ b/src/components/ProductsEcommerce/_productsEcommerce.scss
@@ -19,12 +19,14 @@
 
 .product-card {
   border: 1px solid #ddd;
+  border-radius: 20px;
   padding: 10px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
   text-align: center;
   position: relative;
+  
 }
 
 .product-card:hover {
