--- a/src/layout/LayoutProducts/layoutProducts.module.scss
+++ b/src/layout/LayoutProducts/layoutProducts.module.scss
@@ -17,7 +17,7 @@
   // Estilos para la primera columna (25%)
   background-color: $white;
   border-right: 1px solid #ddd;
-  padding: 10px;
+  padding: 50px 10px;
 }
 
 .mainContent {
