view product cart fin

--- a/src/components/ProductCart/_productCart.scss
+++ b/src/components/ProductCart/_productCart.scss
@@ -5,9 +5,9 @@
 .productCart-product-info {
     display: flex;
     flex-direction: column;
-    align-content: stretch;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-content: space-around;
     align-items: center;
 }
 
