--- a/src/components/Form/formDates.scss
+++ b/src/components/Form/formDates.scss
@@ -35,12 +35,42 @@
     width: 95%;
   }
 
-  .imgFormEdit {
+  .containerImagenToEdit {
     width: 300px;
-    height: 250px;
-    object-fit: contain;
-    img {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+
+    h2 {
       width: 100%;
+      text-align: center;
+      /* margin: 5px; */
+    }
+
+    .imgFormEdit {
+      width: 145px;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 5px;
+      border: 1px solid $primary-color;
+      border-radius: 8px;
+      object-fit: contain;
+      position: relative;
+      overflow: hidden;
+      img {
+        width: 100%;
+      }
+      figcaption {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        background-color: rgba($color: $white, $alpha: 0.8);
+        text-align: center;
+      }
     }
   }
 }
