--- a/src/components/ProductsEcommerce/_productsEcommerce.scss
+++ b/src/components/ProductsEcommerce/_productsEcommerce.scss
@@ -6,15 +6,18 @@
 
 .product-container {
  /*  max-width: 100%; */
-  padding: 30px;
+  padding: 30px 0;
   width: 100%;
 }
 
 .product-grid {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(33%, 1fr));
+  /* display: grid;
+  grid-template-columns: repeat(3, minmax(33%, 1fr)); */
+  display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-  padding: 5px;
+  justify-content: center;
+  /* padding: 5px; */
 }
 
 .product-card {
@@ -26,6 +29,7 @@
   transition: transform 0.2s;
   text-align: center;
   position: relative;
+  width: 250px;
   
 }
 
@@ -93,7 +97,7 @@
   right: 15%;
   cursor: pointer;
 }
-@media screen and (max-width: 950px) {
+/* @media screen and (max-width: 950px) {
   
   .product-grid {
     grid-template-columns: repeat(2, minmax(33%, 1fr));
@@ -111,5 +115,5 @@
     grid-template-columns: repeat(1, minmax(50%, 1fr));
     
     }
-  }
+  } */
 
