modify styles at home

--- a/src/components/Axes/_axes.scss
+++ b/src/components/Axes/_axes.scss
@@ -6,8 +6,8 @@
   padding-top: 30px;
   
   @include desktop2 {
-    padding-top: $padding-top;
-    min-height: $min-height;
+    padding: 10rem;
+
 
   }
 }
