--- a/src/components/Team/_team.scss
+++ b/src/components/Team/_team.scss
@@ -3,8 +3,7 @@
 .team_container {
     cursor: default;
     @include desktop2 {
-        padding-top: $padding-top;
-        min-height: $min-height;
+        padding-bottom: 10%;
 
     } 
 }
