--- a/src/components/GalleryImages/galleryImages.module.scss
+++ b/src/components/GalleryImages/galleryImages.module.scss
@@ -1,46 +1,35 @@
 @import "../../styles/colors";
 @import "../../styles/media-queries";
-
 .container {
   background-color: $white;
-   margin: 2em 1em;
 
   .gallery {
-    columns: 5 200px;
+    columns: 4 200px;
     column-gap: 0.5em;
 
     @include mobile-tablet {
-      columns: 5 150px;
+      columns: 2 50%;
       column-gap: 0.5em;
     }
-    :hover > .description {
-      opacity: 1;
-      visibility: visible;
 
-      h3 {
-        margin-top: 70px;
-        margin-bottom: 15px;
-      }
-
-      .img {
-        transform: scale(1.3);
-      }
-    }
     .overlay {
       position: relative;
       cursor: pointer;
       overflow: hidden;
+      width: 90% auto;
+      height: auto; 
 
       .img {
-        max-width: 100%;
+        width: 100%;
+        height: auto; 
+        max-height: 40vh; 
         display: block;
         outline: 2px solid $white;
         outline-offset: -10px;
         background-color: $primary-color;
-        /* transition: all ease-in-out 2s; */
         transition: all 400ms ease-out;
         will-change: transform;
-
+        
         :hover {
           transform: scale(1.3);
         }
