--- a/src/layout/mainLayout.scss
+++ b/src/layout/mainLayout.scss
@@ -8,10 +8,11 @@
 .mainContainer {
   min-height: 63.3vh;
   margin-top: 75px;
-
+  
   @media screen and (min-width: 1400px) {
     max-width: 80%;
     margin: 0 auto;
+    padding-top: 8rem; 
   }
 }
 .container {
