feat: agrega llamada a puntos de retiro en checkout

--- a/src/components/Slider3d/slide3d.module.scss
+++ b/src/components/Slider3d/slide3d.module.scss
@@ -16,14 +16,14 @@ html {
 }
 @media (min-width: 1440px) {
   html {
-    transform: scale(1.5);
+    //transform: scale(1.5);
     transform-origin: 0 0; /* Escala desde la esquina superior izquierda */
   }
 }
 
 @media (min-width: 2560px) {
   html {
-    transform: scale(1.7);
+    //transform: scale(1.7);
     transform-origin: 0 0; /* Escala desde la esquina superior izquierda */
   }
 }
